--- a/index2.html
+++ b/index2.html
@@ -103,7 +103,7 @@
     
     <div2 id="lista"></div2>
    
-    <script src="Pre-Entrega/segundaPreEntregav2.js">
+    <script src="segundaPreEntregav2.js">
         
     </script>
 
