--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
 
     <div2 id="lista"></div2>
 
-    <script src="Pre-Entrega/segundaPreEntregav2.js"></script>
+    <script src="segundaPreEntregav2.js"></script>
    
 
 </body>
